syntax = "proto3";

package iis;

import "dd4_common.proto";
import "dd4_common_ui.proto";

option java_package = "com.digitald4.iis.proto";
option java_outer_classname = "IISProtos";

enum DeductionType {
  DT_UNKNOWN = 0;
  DT_PRETAX = 1;
  DT_TAX = 2;
  DT_POSTTAX = 3;
}

message Nurse {
  //Fields from User.
	int64 id = 1;
  string user_name = 3;
  string email = 4;
  string first_name = 5;
  string last_name = 6;
  string full_name = 7;
  bool disabled = 8;
  bool read_only = 9;
  string notes = 10;
  int64 last_login = 11;

	int64 reg_date = 20;
  dd4.common.GPSAddress address = 21;
	string phone_number = 22;
	string referral_source = 23;
	double pay_flat = 24;
	double pay_rate = 25;
	double pay_flat_2hr_soc = 26;
	double pay_rate_2hr_soc = 27;
	double pay_flat_2hr_roc = 28;
	double pay_rate_2hr_roc = 29;
	double mileage_rate = 30;
	int64 status_id = 31;
}

message License {
  int64 id = 1;
  int64 nurse_id = 2;
  string nurse_name = 3;
  int64 lic_type_id = 4;
  string lic_type_name = 5;
  string number = 6;
  int64 valid_date = 7;
  int64 expiration_date = 8;
  dd4.common_ui.DataFile data_file = 9;
}

message Patient {
  int64 id = 1;
	int64 referral_date = 2;
	int64 referral_source_id = 3;
  string referral_source_name = 4;
  int64 billing_id = 5;
  string billing_vendor_name = 6;
	string name = 7;
	string mr_num = 8;
	int64 d_o_b = 9;
	int64 dianosis_id = 10;
	int64 therapy_type_id = 11;
	int64 i_v_access_id = 12;
	int64 start_of_care_date = 13;
  dd4.common.GPSAddress service_address = 14;
	string phone_number = 15;
	int64 primary_phone_type_id = 16;
	string alt_contact_number = 17;
	int64 alt_phone_type_id = 18;
	string emergency_contact = 19;
	string emergency_contact_phone = 20;
	string emergency_contact_phone_type_id = 21;
	string rx = 22;
	int64 est_last_day_of_service = 23;
	bool labs = 24;
	string labs_frequency = 25;
	int64 first_recert_due = 26;
	int64 d_c_date = 27;
	bool info_in_s_o_s = 28;
	string scheduling_preference = 29;
	string referral_note = 30;
	int64 referral_resolution_id = 31;
	int64 referral_resolution_date = 32;
	string referral_resolution_note = 33;
	int64 vendor_confirmation_date = 34;
	int64 nurse_confirmation_date = 35;
	int64 patient_confirmation_date = 36;
	int64 meds_delivery_date = 37;
	int64 meds_confirmation_date = 38;
	bool active = 39;
	string description = 40;
	double billing_rate = 41;
	double billing_rate_2hr_soc = 42;
	double billing_rate_2hr_roc = 43;
	double billing_flat = 44;
	double billing_flat_2hr_soc = 45;
	double billing_flat_2hr_roc = 46;
	double mileage_rate = 47;
	int64 patient_status_id = 48;
}

message Vendor {
	int64 id = 1;
	string name = 2;
  dd4.common.GPSAddress address = 3;
	string phone_number = 4;
	string fax_number = 5;
	string contact_name = 6;
	string contact_number = 7;
	string contact_email = 8;
	bool active = 9;
	double billing_rate = 10;
	double billing_rate_2hr_soc = 11;
	double billing_rate_2hr_roc = 12;
	double billing_flat = 13;
	double billing_flat_2hr_soc = 14;
	double billing_flat_2hr_roc = 15;
	double mileage_rate = 16;
	string notes = 17;
}

message Appointment {
	int64 id = 1;
	int64 patient_id = 2;
  string patient_name = 3;
	int64 nurse_id = 4;
  string nurse_name = 5;
	int64 vendor_id = 6;
  string vendor_name = 7;
	int64 start = 8;
	int64 end = 9;
	bool cancelled = 10;
	string cancel_reason = 11;
  int64 nurse_confirm_res_id = 12;
  int64 nurse_confirm_ts = 13;
  string nurse_confirm_notes = 14;

  enum AppointmentState {
    AS_UNKNOWN = 0;
    AS_UNCONFIRMED = 1;
    AS_CONFIRMED = 2;
    AS_CANCELLED = 3;
    AS_PENDING_ASSESSMENT = 4;
    AS_PENDING_APPROVAL = 5;
    AS_BILLABLE = 6;
    AS_BILLABLE_AND_PAYABLE = 7;
    AS_PAYABLE = 8;
    AS_CLOSED = 9;
  }
  AppointmentState state = 15;

  bool assessment_complete = 16;
  bool assessment_approved = 17;
  int64 approved_date = 18;
  int64 approver_id = 19;

	int64 time_in = 20;
	int64 time_out = 21;
  double logged_hours = 22;
  double mileage = 23;

  message AccountingInfo {
    int64 accounting_type_id = 1;
    double flat_rate = 2;
    double hourly_rate = 3;
    double hours = 4;
    double sub_total = 5;
    double mileage = 6;
    double mileage_rate = 7;
    double mileage_total = 8;
    double total = 9;
  }
  AccountingInfo payment_info = 24;
  int64 paystub_id = 25;
  AccountingInfo billing_info = 26;
	int64 invoice_id = 27;

  map<int64, string> assessment = 28;

  dd4.common_ui.DataFile data_file = 29;
}

message Invoice {
  int64 id = 1;
  int64 vendor_id = 2;
  string name = 3;
  int64 generation_time = 4;
  int64 status_id = 5;
  repeated int64 appointment_id = 6;
  double logged_hours = 7;
  double standard_billing = 8;
  double mileage = 9;
  double billed_mileage = 10;
  double total_due = 11;
  double total_paid = 12;
  string comment = 13;
  dd4.common_ui.DataFile data_file = 14;
  double logged_hours_y_t_d = 15;
  double standard_billing_y_t_d = 16;
  double mileage_y_t_d = 17;
  double billed_mileage_y_t_d = 18;
  double billed_y_t_d = 19;
}

message Paystub {
  int64 id = 1;
  int64 nurse_id = 2;
  int64 status_id = 3;
  repeated int64 appointment_id = 4;
  string nurse_name = 5;
  int64 pay_date = 6;
  string comment = 7;
  double logged_hours = 8;
  double gross_pay = 9;
  int32 mileage = 10;
  double pay_mileage = 11;

  message Deduction {
    int64 type_id = 1;
    DeductionType type = 2;
    double factor = 3;
    double amount = 4;
    double amount_y_t_d = 5;
  }
  repeated Deduction deduction = 12;

  double pre_tax_deduction = 13;
  double taxable = 14;
  double tax_total = 15;
  double post_tax_deduction = 16;
  double non_tax_wages = 17;
  double net_pay = 18;

  int64 generation_time = 19;
  double logged_hours_y_t_d = 20;
  double gross_pay_y_t_d = 21;
  int32 mileage_y_t_d = 22;
  double pay_mileage_y_t_d = 23;
  double pre_tax_deduction_y_t_d = 24;
  double taxable_y_t_d = 25;
  double tax_total_y_t_d = 26;
  double post_tax_deduction_y_t_d = 27;
  double non_tax_wages_y_t_d = 28;
  double net_pay_y_t_d = 29;
  dd4.common_ui.DataFile data_file = 30;
}